--- a/thesis.bib
+++ b/thesis.bib
@@ -365,6 +365,15 @@ author = {Sangdae, Park and Jung, Jae Hak},
 %    Books                                                                     %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@book{Martello:1990,
+ author = {Martello, Silvano and Toth, Paolo},
+ title = {Knapsack Problems: Algorithms and Computer Implementations},
+ year = {1990},
+ isbn = {0-471-92420-2},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
+} 
+
 @book{Schaschke:2014,
   author = {Carl Schaschke},
   title = {A Dictionary of Chemical Engineering},
@@ -372,6 +381,15 @@ author = {Sangdae, Park and Jung, Jae Hak},
   publisher = {Oxford University Press},
   address = {Oxford},
   doi = {10.1093/acref/9780199651450.001.0001},
+}
+
+@book{Korte:2012,
+  author = {Bernhard Korte and Jens Vygen},
+  title = {Combinatorial Optimization: Theory and Algorithms},
+  year = {2012},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-24488-9},
 }
 
 @Inbook{Schaus:2012,
@@ -383,7 +401,6 @@ author = {Sangdae, Park and Jung, Jae Hak},
   publisher={Springer},
   address={Berlin, Heidelberg},
   pages={815--822},
-  isbn={978-3-642-33558-7},
   doi={10.1007/978-3-642-33558-7_58},
 }
 
